--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,6 @@
 def registry = 'https://taxi786.jfrog.io/'
+def imageName = 'taxi786.jfrog.io/taxi-docker-local/taxiapp'
+def version   = '1.0.1'
 pipeline {
     agent {
         node {
@@ -61,7 +63,27 @@ environment {
                      server.publishBuildInfo(buildInfo)
                      echo '<--------------- Jar Publish Ended --------------->'  
              }
-        }   
+        } 
+        stage(" Docker Build ") {
+      steps {
+        script {
+           echo '<--------------- Docker Build Started --------------->'
+           app = docker.build(imageName+":"+version)
+           echo '<--------------- Docker Build Ends --------------->'
+        }
+      }
+    }
+     stage (" Docker Publish "){
+        steps {
+            script {
+               echo '<--------------- Docker Publish Started --------------->'  
+                docker.withRegistry(registry, 'jfrog-cred'){
+                    app.push()
+                }    
+               echo '<--------------- Docker Publish Ended --------------->'  
+            }
+        }
+    }  
     }
 }
 }
